Fix false positives: calibrate structural heuristics, add trusted URL allowlist, tighten malware signature definitions